#               Copyright John Nunley, 2022.
# Distributed under the Boost Software License, Version 1.0.
#       (See accompanying file LICENSE or copy at
#         https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "fionread"
version = "0.1.2"
edition = "2018"
license = "BSL-1.0"
description = "The `fionread` IO control reads the number of bytes available to read from the file descriptor."
authors = ["John Notgull"]
documentation = "https://docs.rs/fionread"
repository = "https://github.com/notgull/fionread"
homepage = "https://notgull.github.io/fionread#readme"

[target.'cfg(unix)'.dependencies]
nix = "0.23"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.32", features = ["Win32_Networking_WinSock"] }